# STM32_Template

./: .gitignore  CMakeLists.txt  README.md  STM32L152.svd
cmake/: arm-gcc-toolchain.cmake
drivers/global/: global.h
drivers/gpio/: led_driver.c  led_driver.h
drivers/memory/: mamory.c  memory.h
drivers/systick/: systick.c  systick.h
drivers/timer/: timer_drv.c  timer_drv.h
drivers/uart/: uart_drv.c  uart_drv.h
src/: main.c
